[builds-api] refactor build start response type
Depends-on: !74
Depends-on: builds-cli!55
Bug: T356724
